--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -219,7 +219,9 @@
                     <p style="font-family: -webkit-body;font-size: x-large;margin-left: 155px;font-weight: 600;color: #0e0e0e;">
                         Accelerator for S/4HANA Transformation
                     </p>
+
                 </div>
+                
                 <div class="app-header-right">
                     <a href="javascript:void(0);" class="nav-link">
                         <i class="nav-link-icon fa fa-envelope-square"></i>
@@ -238,17 +240,17 @@
                                            aria-expanded="false"
                                            class="p-0 btn">
                                             @*<img width="30"
-                                                class="rounded-circle"
-                                                src="~/Asset/images/ManojPass.jpg"
-                                                alt="" />*@
+                                    class="rounded-circle"
+                                    src="~/Asset/images/ManojPass.jpg"
+                                    alt="" />*@
                                             @if (Session["UserName"] != null)
                                             {
                                                 <i id="UserName" style="color:black !important;">@Session["UserName"].ToString() (@Session["UserType"].ToString())</i>
                                             }
                                             @*else
-                                                {
-                                                    Html.Action("Logout","Login");
-                                                }*@
+                                    {
+                                        Html.Action("Logout","Login");
+                                    }*@
                                             <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                         </a>
                                         <div tabindex="-1"
@@ -256,51 +258,51 @@
                                              aria-hidden="true"
                                              class="dropdown-menu dropdown-menu-right">
                                             @*<button type="button"
-                                                        tabindex="0"
-                                                        class="dropdown-item" style="font-weight:bold;color:blue;">
-                                                    @DashboardName
+                                            tabindex="0"
+                                            class="dropdown-item" style="font-weight:bold;color:blue;">
+                                        @DashboardName
 
-                                                </button>*@
+                                    </button>*@
                                             @*<button type="button"
-                                                        tabindex="0"
-                                                        class="dropdown-item">
-                                                    User Account
-                                                </button>
-                                                <button type="button"
-                                                        tabindex="0"
-                                                        class="dropdown-item">
-                                                    Settings
-                                                </button>
-                                                <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                                                <button type="button"
-                                                        tabindex="0"
-                                                        class="dropdown-item">
-                                                    Actions
-                                                </button>*@
+                                            tabindex="0"
+                                            class="dropdown-item">
+                                        User Account
+                                    </button>
+                                    <button type="button"
+                                            tabindex="0"
+                                            class="dropdown-item">
+                                        Settings
+                                    </button>
+                                    <h6 tabindex="-1" class="dropdown-header">Header</h6>
+                                    <button type="button"
+                                            tabindex="0"
+                                            class="dropdown-item">
+                                        Actions
+                                    </button>*@
                                             <div tabindex="-1" class="dropdown-divider"></div>
                                             @*<button type="button"
-                                                        tabindex="0"
-                                                        class="dropdown-item">
-                                                    LogOut
-                                                </button>*@
+                                            tabindex="0"
+                                            class="dropdown-item">
+                                        LogOut
+                                    </button>*@
                                             @Html.ActionLink("LogOut", "Logout", "login", new { area = "" }, new { @class = "dropdown-item" })
                                         </div>
                                     </div>
                                 </div>
                                 @*<div class="widget-content-left ml-3 header-user-info">
-                                        <div class="widget-heading">
-                                            Alina Mclourd
-                                        </div>
-                                        <div class="widget-subheading">
-                                            VP People Manager
-                                        </div>
-                                    </div>*@
+                            <div class="widget-heading">
+                                Alina Mclourd
+                            </div>
+                            <div class="widget-subheading">
+                                VP People Manager
+                            </div>
+                        </div>*@
                                 @*<div class="widget-content-right header-user-info ml-3">
-                                        <button type="button"
-                                                class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
-                                            <i class="fa text-white fa-calendar pr-1 pl-1"></i>
-                                        </button>
-                                    </div>*@
+                            <button type="button"
+                                    class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
+                                <i class="fa text-white fa-calendar pr-1 pl-1"></i>
+                            </button>
+                        </div>*@
                             </div>
                         </div>
                     </div>
@@ -376,6 +378,14 @@
                                         <!-- <i class="metismenu-icon pe-7s-home"></i> -->
                                         <i class="metismenu-icon fa fa-american-sign-language-interpreting"></i>
                                         PM Task Monitor
+                                    </a>
+                                </li>
+                                <li>
+
+                                    <a href="@Url.Action("PMUPload", "ProjectMonitor")">
+                                        <!-- <i class="metismenu-icon pe-7s-home"></i> -->
+                                        <i class="metismenu-icon fa fa-american-sign-language-interpreting"></i>
+                                        PM File upload
                                     </a>
                                 </li>
                             }
@@ -715,6 +725,15 @@
                                             </a>
                                         </li>
                                     }
+                                    @if (User.IsInRole("Project Manager"))
+                                    {
+                                        <li>
+                                            <a href="@Url.Action("PMReport", "Report")">
+                                                <i class="metismenu-icon pe-7s-diamond"></i>
+                                                PM Report's
+                                            </a>
+                                        </li>
+                                    }
                                 </ul>
                             </li>
                             @if (User.IsInRole("Consultant") || User.IsInRole("Project Manager") || User.IsInRole("Customer"))
@@ -744,18 +763,18 @@
                             }
 
 
-                                @*Link*@
-                                <li>
-                                    <a href="http://123.176.34.15:8021/survey/" target="_blank">
-                                        <i class="metismenu-icon fa fa-check-square"></i>
-                                        Questionnaire survey
-                                        <i class="metismenu-state-icon fa caret-left"></i>
-                                    </a>
+                            @*Link*@
+                            <li>
+                                <a href="http://123.176.34.15:8021/survey/" target="_blank">
+                                    <i class="metismenu-icon fa fa-check-square"></i>
+                                    Questionnaire survey
+                                    <i class="metismenu-state-icon fa caret-left"></i>
+                                </a>
 
-                                </li>
+                            </li>
 
 
-                            </ul>
+                        </ul>
                         }
                     </div>
                 </div>
@@ -764,6 +783,16 @@
                 <div  class="app-main_Scroll">
                     <div class="app-main__inner">
                         <hr />
+                        <div style="max-width:99%;">
+                            <div class="row">
+                                <div class="col-6">
+                                    <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
+                                </div>
+                                <div class="col-6">
+                                    <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
+                                </div>
+                            </div>
+                        </div>
                         @RenderBody()
                         @RenderSection("scripts", required: false)
                     </div>
