--- a/ProAcc/Views/Report/AssessmentReport.cshtml
+++ b/ProAcc/Views/Report/AssessmentReport.cshtml
@@ -5,42 +5,42 @@
 }
 <script src="~/Asset/Jquery/PdfJs/pdf.js"></script>
 <div>
-    <iframe id="pdf-js-viewer" src="~/Asset/UploadedFiles/Temp/678bda2f-c281-48c1-b565-64f3773d3b1f.pdf" title="webviewer" frameborder="0"></iframe>
+    <iframe id="pdf-js-viewer" src="~/Asset/UploadedFiles/678bda2f-c281-48c1-b565-64f3773d3b1f.pdf" title="webviewer" frameborder="0"></iframe>
 </div>
 @Html.Hidden("RedirectTo", Url.Action("Home", "Home"))
-@if (ViewBag.Message != null)
-{
+    @if (ViewBag.Message != null)
+    {
 
-    <a id="Msg" style="display:none">@ViewBag.Message</a>
+        <a id="Msg" style="display:none">@ViewBag.Message</a>
+        <script type="text/javascript">
+            $('#pdf-js-viewer').hide();
+            var info = $('#Msg').text();
+            Notiflix.Report.Info("ProAcc Info !", info, "Click", function () {
+                var url = $("#RedirectTo").val();
+                location.href = url;
+            });
+        </script>
+
+    }
+
+    @if (ViewBag.Status)
+    {
+    }
+    else
+    {
+        <a id="MsgStatus" style="display:none">Sorry File Not Found Kindly Contact Admin..!</a>
     <script type="text/javascript">
         $('#pdf-js-viewer').hide();
-        var info = $('#Msg').text();
+        var info = $('#MsgStatus').text();
         Notiflix.Report.Info("ProAcc Info !", info, "Click", function () {
             var url = $("#RedirectTo").val();
             location.href = url;
         });
     </script>
-
-}
-
-@if (ViewBag.Status)
-{ 
-}
-else
-{
-    <a id="MsgStatus" style="display:none">Sorry File Not Found Kindly Contact Admin..!</a>
-<script type="text/javascript">
-    $('#pdf-js-viewer').hide();
-    var info = $('#MsgStatus').text();
-    Notiflix.Report.Info("ProAcc Info !", info, "Click", function () {
-        var url = $("#RedirectTo").val();
-        location.href = url;
-    });
-</script>
-}
+    }
 <script>
     $(document).ready(function () {
-        var Path ="@ViewBag.PDFfileName";
+        var Path = "@ViewBag.PDFfileName";
         Path = Path.replace("~/", "../");
     $('#pdf-js-viewer').attr('src', Path);
         dimention();
@@ -48,7 +48,7 @@ else
             dimention();
         });
         function dimention() {
-            var newHeight = $(".app-main__inner").height()-10;
+            var newHeight = $(".app-main_Scroll").height()-50;
             var Width = $(".app-main__inner").width();
             $("iframe").height(newHeight);
             $("iframe").width(Width);
