--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -240,7 +240,7 @@
         function TaskEstHrs() {
             var txtEstimated = $("#txtEstimated").val();
             //var filter =/^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$/  //{IMP}
-            var filter =/^([0-9][0-9]):[0-5][0-9]$/
+            var filter =/^([0-9]{1,2}):[0-5][0-9]$/
             if (!filter.test(txtEstimated)) {
                 $("#lblEstimated").html("Time is Invalid").show();
             }
