--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<a class="card-title">Create Instance</a>
+<a class="card-title">Instance Creation</a>
 <hr />
 <div style="padding:1em;">
     <div class="row">
